# itmo-brick7rope-modeling

./: .gitignore  CMakeLists.txt  README.md  math.pro  svg2ico.py
.github/workflows/: build.yml
res/: resources.rc
resources/: cursor.cur  resources.rc
src/: app.h  brick.hpp  common.h  engine.c  engine_manager.cpp  engine_manager.hpp  gui.h  main.c  main.cpp  node_list.cpp  rope.hpp  scene.cpp  scene.hpp  threads.h
src/gui/: button.cpp  button.hpp  classes.c  main_window_data.h  mainloop.c  processors.c  processors.cpp  processors.h  registering.c  render.c  render.cpp  resources.c  toolpanel.cpp  window.c  windows.c
src/objects/: brick.c  brick.h  brick.hpp  buffer.hpp  history.hpp  rope.c  rope.h  rope.hpp  scene.c  scene.cpp  scene.h  scene.hpp  scene_arena.c  scene_arena.h  stack.c  stack.h
